unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/zkmulti__MCShipmate_Preference__c.object-meta.xml
<CustomObject>
    <label>Shipmate Preference</label>
    <nameField>
        <displayFormat>ShipmatePreference-{000000}</displayFormat>
        <label>Shipmate Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipmate Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>