unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__AutoWeighPackage__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AutoWeighPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Weigh Package</label>
    <type>Checkbox</type>
</CustomField>