unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_Company__c</fullName>
    <label>Billing Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>