unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>