unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>