unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Company_URL__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Company_URL__c</fullName>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>