unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__DetailedViewReUsePackageList__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DetailedViewReUsePackageList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detailed View Re Use Package List</label>
    <type>Checkbox</type>
</CustomField>