unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__EmailLabelTextBodyDefault__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EmailLabelTextBodyDefault__c</fullName>
    <description>For completed Shipments, this will be the default email body when sending shipping labels via email</description>
    <inlineHelpText>For completed Shipments, this will be the default email body when sending shipping labels via email</inlineHelpText>
    <label>Email Label Text Body Default</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>