unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__EMailMessageDefault__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailMessageDefault__c</fullName>
    <label>Email Message Default</label>
    <type>TextArea</type>
</CustomField>