unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__EMailNotifyOnDeliveryDefault__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnDeliveryDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Delivery</label>
    <type>Checkbox</type>
</CustomField>