unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__EMailNotifyOnExceptionDefault__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnExceptionDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Exception</label>
    <type>Checkbox</type>
</CustomField>