unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__EnableScales__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EnableScales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Scales</label>
    <type>Checkbox</type>
</CustomField>