unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__GenericCredentialsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__GenericCredentialsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Credentials Encrypted</label>
    <type>Checkbox</type>
</CustomField>