unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Is_Demo_Carrier_Account__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Demo_Carrier_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demo Carrier Account</label>
    <type>Checkbox</type>
</CustomField>