unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__LastClosePerformedAt__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LastClosePerformedAt__c</fullName>
    <label>Last Close Performed At</label>
    <type>DateTime</type>
</CustomField>