unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__LastCloseTimestamp__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LastCloseTimestamp__c</fullName>
    <label>Last Close Date/Time</label>
    <type>DateTime</type>
</CustomField>