unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__LastVersionCaptureTime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LastVersionCaptureTime__c</fullName>
    <label>Last Version Capture Time</label>
    <type>DateTime</type>
</CustomField>