unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__LicenseAgreementAccepted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LicenseAgreementAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Agreement</label>
    <type>Checkbox</type>
</CustomField>