unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__PreferenceInfo__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PreferenceInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipmate Preference Info</label>
    <referenceTo>zkmulti__Shipmate_Preference_Info__c</referenceTo>
    <relationshipLabel>Shipmate Preferences</relationshipLabel>
    <relationshipName>Shipmate_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>