unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__SendEMailNotificationToRecipient__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SendEMailNotificationToRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Notification to Recipient</label>
    <type>Checkbox</type>
</CustomField>