unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__SendEMailNotificationToShipper__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SendEMailNotificationToShipper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Notification to Shipper</label>
    <type>Checkbox</type>
</CustomField>