unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Shipping_Is_Residential__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipping_Is_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Is Residential</label>
    <type>Checkbox</type>
</CustomField>