unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>