unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__SubscriptionDataEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SubscriptionDataEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Data Encrypted</label>
    <type>Checkbox</type>
</CustomField>