unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Tracking_Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Tracking_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking Preference</label>
    <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
    <relationshipLabel>Shipmate Preferences</relationshipLabel>
    <relationshipName>Shipmate_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>