unpackaged/main/default/objects/zkmulti__MCShipmate_Preference__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>zkmulti__Carrier__c</columns>
    <columns>NAME</columns>
    <columns>zkmulti__AccountNumber__c</columns>
    <columns>zkmulti__CarrierAccountDescription__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>